[b]Version 0.8.1[/b]:

(2012-09-14)
 * Fix youtube playback.

(2012-08-26)
 * Fix: mplayer2 was not recognized if the name was in lowercase in the
   identification string.

(2012-08-24)
 * Show the background picture on stop.

(2012-08-14)
 * Youtube: don't use a user agent by default. It's possible to set
   the user agent in smplayer.ini though.

(2012-07-30)
 * Add mka and m4a to the list of extensions (for audio).

(2012-07-04)
 * New option "save_dirs" in the [directories] section. If set to false
   the latest used directory won't be saved.

(2012-07-23)
 * Add wtv to the list of extensions

(2012-06-25)
 * Add oga and ogx to the list of extensions
 
(2012-05-29)
 * Enable Audio CD on Windows (requires a libcdio enabled MPlayer)

[b]Version 0.8.0[/b]:

(2012-04-01)
 * Find subtitles window: display first the most used languages in the
   filter combobox. And add "pb" for Portuguese from Brasil.

(2012-03-31)
 * Fix the line breaks on downloaded *.sub files from opensubtitles.

(2012-03-29)
 * (Youtube) Recognize short urls.

(2012-03-28)
 * Display chapter names in the chapter menu.

(2012-03-19)
 * It's possible to change GUI without restarting.
 * Bug fix: remote m3u didn't open from the favorites menu or command line.

(2012-03-17)
 * Move the blur and sharpen filters to a group, so only one can be activated.
   It doesn't make much sense to be able to enable the blur and sharpen
   at the same time.
 * Move the denoise and blur/sharpen options to submenus.
 * Youtube quality by default is now mp4/720p.
 * The default width of the floating control is now 70%.
 * Toolbar editor: give a name to the widget actions (time slider and so on).

(2012-03-15)
 * Add gradfun to video -> filters.
 * Add blur and sharpen filters.

(2012-03-14)
 * Support for drag and drop in the toolbar editor.

(2012-03-13)
 * Toolbar editor. If you right click on any toolbar you'll get a menu
   with options to edit the toolbars (including the control bars).